objects/dbu_Store_Location__c.object
<CustomObject>
    <description>This custom object will keep the store location information for CSSNA store</description>
    <fields>
        <fullName>dbu_BusinessDay__c</fullName>
        <label>dbu BusinessDay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Business_Hours__c</fullName>
        <label>dbu Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_City__c</fullName>
        <label>dbu City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Country__c</fullName>
        <label>dbu Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Geo_Location__c</fullName>
        <label>dbu Geo Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>dbu_Location_Status__c</fullName>
        <label>dbu Location Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_OrdersFrom__c</fullName>
        <label>dbu_OrdersFrom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Phone__c</fullName>
        <label>dbu Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_State_Code__c</fullName>
        <label>dbu State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_State__c</fullName>
        <label>dbu State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_StoreCode__c</fullName>
        <label>dbu StoreCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Street__c</fullName>
        <label>dbu Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Timezone__c</fullName>
        <label>dbu Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_ZipCode__c</fullName>
        <label>dbu ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>dbu Store Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>dbu_State__c</columns>
        <columns>dbu_StoreCode__c</columns>
        <columns>dbu_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>dbu Store Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>dbu Store Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>